--- a/source/less/block/main-nav.less
+++ b/source/less/block/main-nav.less
@@ -5,6 +5,11 @@
   padding: 5px 0;
 }
 
+.main-nav__logo {
+  height: 110px;
+  width: 60px;
+}
+
 .main-nav__clip-svg {
   clip-path: url(#myClip);
   object-fit: cover;
