--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,5 @@
 @import "block/page-main.less";
 @import "block/hero.less";
 @import "block/calendar.less";
+@import "block/is-today.less";
+@import "block/pusheen.less";
