--- a/source/css/style.css
+++ b/source/css/style.css
@@ -198,14 +198,30 @@ body {
   background-color: transparent;
   left: 0;
   position: absolute;
-  top: 0;
   width: 100px;
+  z-index: 10;
+}
+@media (min-width: 649px) {
+  .page-header {
+    top: 0;
+  }
+}
+@media (max-width: 649px) {
+  .page-header {
+    bottom: 0;
+    margin: 0 auto;
+    right: 0;
+  }
 }
 .main-nav {
   background-color: transparent;
   display: block;
   margin: 0 auto;
   padding: 5px 0;
+}
+.main-nav__logo {
+  height: 110px;
+  width: 60px;
 }
 .main-nav__clip-svg {
   -webkit-clip-path: url(#myClip);
@@ -214,24 +230,46 @@ body {
      object-fit: cover;
 }
 .page-main {
-  background-color: transparent;
+  background-color: #fff;
+  margin: 20px auto;
+  padding: 0;
+  padding-top: 20px;
+  position: relative;
+  width: 550px;
+}
+@media (max-width: 649px) {
+  .page-main {
+    background-color: transparent;
+    margin-bottom: 120px;
+    padding-top: 5px;
+    width: 320px;
+  }
 }
 .hero {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url("../img/nov.jpg");
+  background-image: url("../img/pusheen-simple.png");
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 200px;
-  margin: 40px auto;
-  width: 600px;
+  height: 240px;
+  margin: 0 auto;
+  margin-bottom: 5px;
+  padding: 0;
+  padding-right: 20px;
+  padding-top: 30px;
+  width: 550px;
 }
 .hero__calendar {
   color: #fff;
@@ -240,15 +278,27 @@ body {
   letter-spacing: 5px;
   margin: auto;
   text-align: center;
+  width: 100%;
+}
+@media (max-width: 649px) {
+  .hero {
+    height: 165px;
+    padding-right: 5px;
+    padding-top: 25px;
+    width: 300px;
+  }
+  .hero__calendar {
+    font-size: 40px;
+    line-height: 40px;
+  }
 }
 .calendar {
-  margin-bottom: 40px;
+  margin: 0 auto;
   overflow: hidden;
   width: 100%;
 }
 .calendar__container {
   background-color: #fff;
-  border: 4px solid #000;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   height: 365px;
@@ -269,9 +319,85 @@ th {
   font-size: 18px;
   text-align: center;
 }
+@media (max-width: 649px) {
+  .calendar__container {
+    -webkit-box-shadow: 0 0 8px 8px #fff;
+            box-shadow: 0 0 8px 8px #fff;
+    height: 390px;
+    padding-top: 25px;
+    width: 320px;
+  }
+  .calendar__table {
+    height: 250px;
+    width: 300px;
+  }
+  td,
+  th {
+    font-size: 16px;
+  }
+}
 .is-today {
-  background-color: #f89c26;
+  background-color: #FFF0F5;
   border-radius: 50px;
   color: #000;
   opacity: 1;
+}
+.pusheen {
+  bottom: 0;
+  height: auto;
+  position: absolute;
+  right: -50px;
+  width: 150px;
+}
+.pusheen__container {
+  height: 150px;
+  position: relative;
+  margin: 0 auto;
+  padding: 0;
+  width: 158px;
+  z-index: 10;
+}
+.pusheen__container--pumpkin::before {
+  background-image: url("../img/top-pmkn.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+  height: 151px;
+  left: 1px;
+  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  width: 159px;
+  z-index: 2;
+}
+.pusheen__container--pumpkin::after {
+  background-image: url("../img/boo.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+  height: 130px;
+  left: 21px;
+  position: absolute;
+  top: 30px;
+  width: 111px;
+  z-index: -1;
+}
+.pusheen__container--pumpkin:active::before {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+  opacity: 0;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+.pusheen__container--pumpkin:active::after {
+  -webkit-transform: translateY(-82px);
+          transform: translateY(-82px);
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+}
+@media (max-width: 649px) {
+  .pusheen {
+    right: 0;
+    bottom: -35px;
+  }
 }
