--- a/source/less/block/calendar.less
+++ b/source/less/block/calendar.less
@@ -1,12 +1,11 @@
 .calendar {
-  margin-bottom: 40px;
+  margin: 0 auto;
   overflow: hidden;
   width: 100%;
 }
 
 .calendar__container {
   background-color: #fff;
-  border: 4px solid #000;
   box-sizing: border-box;
   height: 365px;
   margin: 0 auto;
@@ -29,9 +28,21 @@ th {
   text-align: center;
 }
 
-.is-today {
-  background-color: @today;
-  border-radius: 50px;
-  color: #000;
-  opacity: 1;
+@media (max-width: @mobile-width-max) {
+  .calendar__container {
+    box-shadow: 0 0 8px 8px #fff;
+    height: 390px;
+    padding-top: 25px;
+    width: 320px;
+  }
+
+  .calendar__table {
+    height: 250px;
+    width: 300px;
+  }
+
+  td,
+  th {
+    font-size: 16px;
+  }
 }
