--- a/source/less/block/page-main.less
+++ b/source/less/block/page-main.less
@@ -1,3 +1,17 @@
 .page-main {
-  background-color: transparent;
+  background-color: #fff;
+  margin: 20px auto;
+  padding: 0;
+  padding-top: 20px;
+  position: relative;
+  width: 550px;
+}
+
+@media (max-width: @mobile-width-max) {
+  .page-main {
+    background-color: transparent;
+    margin-bottom: 120px;
+    padding-top: 5px;
+    width: 320px;
+  }
 }
