--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,7 +1,7 @@
 @tablet-width: 660px;
 @desktop-width: 1200px;
-@tablet-width-max: 1199px;
-@mobile-width-max: 779px;
+@tablet-width-max: 1000px;
+@mobile-width-max: 649px;
 @retina-dpi: 144dpi;
 @retina-dppx: 1.5dppx;
-@today: #f89c26;
+@today: #FFF0F5;
