--- a/source/less/block/pusheen.less
+++ b/source/less/block/pusheen.less
@@ -43,7 +43,7 @@
     }
   }
 
-  &--pumpkin:active {
+  &--on-click {
     &::before {
       transform: translateY(-10px);
       opacity: 0;
@@ -56,7 +56,6 @@
     }
   }
 }
-
 
 @media (max-width: @mobile-width-max) {
   .pusheen {
