--- a/source/less/global.less
+++ b/source/less/global.less
@@ -14,3 +14,20 @@ body {
   padding: 0;
   position: relative;
 }
+
+main {
+  display: block;
+}
+
+td,
+th {
+  font-size: 18px;
+  text-align: center;
+}
+
+@media (max-width: @mobile-width-max) {
+  td,
+  th {
+    font-size: 16px;
+  }
+}
