--- a/source/less/block/hero.less
+++ b/source/less/block/hero.less
@@ -21,11 +21,10 @@
   font-size: 60px;
   line-height: 60px;
   letter-spacing: 5px;
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
   width: 100%;
 }
-
 
 @media (max-width: @mobile-width-max) {
   .hero {
